--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -30,5 +31,8 @@
     "url": "https://github.com/thanhcongnguyen/giacmotourist/issues"
   },
   "homepage": "https://github.com/thanhcongnguyen/giacmotourist#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "mocha": "^5.2.0"
+  }
 }
